--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
 
-  <body>
+  <body id="gradient">
 
     <h1>Background Generator</h1>
     <input class="color1" type="color" name="color1" value="#00ff00" />
